Added a simple benchmark.